# lab

./: README.md
lab1/source/: main.cpp
lab2/: CMakeLists.txt
lab2/shaders/: simple.frag  simple.vert
lab2/source/: MyGlWindow.cpp  MyGlWindow.h  Source.cpp
lab2_cube/: launch.vs.json
lab2_cube/shaders/: simple.frag  simple.vert
lab2_cube/source/: MyGlWindow.cpp  MyGlWindow.h  Program.h  Source.cpp  cube.cpp  cube.h
lab2_init/shaders/: simple.vert
lab2_init/source/: MyGlWindow.cpp  MyGlWindow.h  Source.cpp
lab3_bunny/: CMakeLists.txt
lab3_bunny/shaders/: simple.frag
lab3_bunny/source/: MyGlWindow.cpp  MyGlWindow.h  cube.cpp  cube.h
lab3_cow/: CMakeLists.txt
lab3_cow/shaders/: simple.vert
lab3_cow/source/: MyGlWindow.cpp  MyGlWindow.h  cube.cpp  cube.h
lab3_plane/: CMakeLists.txt
lab3_plane/shaders/: floor.vert
lab3_plane/source/: MyGlWindow.cpp  MyGlWindow.h  cube.cpp  cube.h
lab4_cow_phong/shaders/: phong.vert  phong2.frag  phong2.vert  simple.vert
lab4_cow_phong/source/: MyGlWindow.cpp  Source.cpp  cube.cpp  cube.h
lab4_marchingCube/: CMakeLists.txt
lab4_marchingCube/shaders/: floor.frag  floor.vert  simple.frag  simple.vert
lab4_marchingCube/source/: CellGrid.cpp  CellGrid.h  ControlNode.cpp  ControlNode.h  Coord.cpp  Coord.h  CubeGrid.cpp  CubeGrid.h  Mesh.cpp  Mesh.h  MyGlWindow.cpp  MyGlWindow.h  Program.cpp  Source.cpp  Table.h  Triangle.cpp  Triangle.h  (+4 more)
lab5_textureMapping/: CMakeLists.txt
rasterization_skeleton_ complete/: CMakeLists.txt  CMakePresets.json
rasterization_skeleton_ complete2/: CMakeLists.txt  readme.txt
(+31 files in other folders)
